- [Feature] Send arbitrary commands over SSH using the 'Send Command...' interface (SFTP) [#3]
- [Feature] Archive and unarchive files and folders (ZIP, TAR etc.) (SFTP) [#2376]
- [Feature] Clickable URL fields
- [Feature] Display distinguished icon per protocol for bookmarks
- [Feature] Set quarantine attribute on downloaded files
- [Bugfix] Uploads fail with digest access authentication [#2268]
- [Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [#2571]

3.0.3 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0.3]
- [Bugfix] Arbitrary Crashes [#2142]
- [Bugfix] Various compatibility fixes for STAT listings (FTP) [#2445, #2435]
- [Bugfix] Open Web URL fails [#2466]

3.0.2 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0.2]
- [Localize] Greek Localization
- [Feature] Added transcript (S3)
- [Feature] Added transcript (WebDAV)
- [Feature] Support for faster directory listings using STAT command on the control connection (FTP) [#683]
- [Feature] Display bookmark view for new browser window [#2252]
- [Feature] Option in browser context menu to open selected folder in new browser [#2036]
- [Feature] Option in browser context menu to add bookmark for selected folder [#2222]
- [Feature] 'Add new bookmark' toolbar button
- [Feature] Cannot select private key in login prompt (SSH) [#2221]
- [Feature] Authentication with both password and public key (SSH) [#2203]
- [Bugfix] Moving or copying files to another bucket fails (S3) [#2157]
- [Bugfix] Folders collapse in outline view when refreshing [#2033]
- [Bugfix] Cannot connect with empty password [#2109]
- [Bugfix] Saving when editor exits does not upload edited file [#2120]
- [Bugfix] Crash when closing edited file before upload completes [#2377]
- [Bugfix] Wrong selection with search filter in Transfer window [#2336]
- [Bugfix] Stop button does not work during countdown to retry transfer [#2121]
- [Bugfix] Transfers fail using AppleScript (SFTP) [#2244]