@@ -22,48 +22,9 @@
 <li>[Feature] Clickable URL fields
 <li>[Feature] Display distinguished icon per protocol for bookmarks
 <li>[Feature] Set quarantine attribute on downloaded files</li>
+<li>[Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [<a href="http://trac.cyberduck.ch/ticket/2823">#2823</a>]</li>
 <li>[Bugfix] Uploads fail with digest access authentication [<a href="http://trac.cyberduck.ch/ticket/2268">#2268</a>]</li>
 <li>[Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [<a href="http://trac.cyberduck.ch/ticket/2571">#2571</a>]</li>
-        </ul>
-    </div>
-
-    <div>
-		<strong><a href=
-		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0.3">
-		3.0.3</a></strong> (Build 4205)<br />
-
-		<ul>
-<li>[Bugfix] Arbitrary Crashes [<a href="http://trac.cyberduck.ch/ticket/2142">#2142</a>]</li>
-<li>[Bugfix] Various compatibility fixes for STAT listings (FTP) [<a href="http://trac.cyberduck.ch/ticket/2445">#2445</a>, <a href="http://trac.cyberduck.ch/ticket/2435">#2435</a>]</li>
-<li>[Bugfix] Open Web URL fails [<a href="http://trac.cyberduck.ch/ticket/2466">#2466</a>]</li>
-        </ul>
-    </div>
-
-    <div>
-		<strong><a href=
-		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.0.2">
-		3.0.2</a></strong> (Build 4166)<br />
-
-		<ul>
-<li>[Localize] Greek Localization</li>
-<li>[Feature] Added transcript (S3)</li>
-<li>[Feature] Added transcript (WebDAV)</li>
-<li>[Feature] Support for faster directory listings using STAT command on the control connection (FTP) [<a href="http://trac.cyberduck.ch/ticket/683">#683</a>]</li>
-<li>[Feature] Display bookmark view for new browser window [<a href="http://trac.cyberduck.ch/ticket/2252">#2252</a>]</li>
-<li>[Feature] Option in browser context menu to open selected folder in new browser [<a href="http://trac.cyberduck.ch/ticket/2036">#2036</a>]</li>
-<li>[Feature] Option in browser context menu to add bookmark for selected folder [<a href="http://trac.cyberduck.ch/ticket/2222">#2222</a>]</li>
-<li>[Feature] 'Add new bookmark' toolbar button</li>
-<li>[Feature] Cannot select private key in login prompt (SSH) [<a href="http://trac.cyberduck.ch/ticket/2221">#2221</a>]</li>
-<li>[Feature] Authentication with both password and public key (SSH) [<a href="http://trac.cyberduck.ch/ticket/2203">#2203</a>]</li>
-<li>[Bugfix] Moving or copying files to another bucket fails (S3) [<a href="http://trac.cyberduck.ch/ticket/2157">#2157</a>]</li>
-<li>[Bugfix] Folders collapse in outline view when refreshing [<a href="http://trac.cyberduck.ch/ticket/2033">#2033</a>]</li>
-<li>[Bugfix] Cannot connect with empty password [<a href="http://trac.cyberduck.ch/ticket/2109">#2109</a>]</li>
-<li>[Bugfix] Saving when editor exits does not upload edited file [<a href="http://trac.cyberduck.ch/ticket/2120">#2120</a>]</li>
-<li>[Bugfix] Crash when closing edited file before upload completes [<a href="http://trac.cyberduck.ch/ticket/2377">#2377</a>]</li>
-<li>[Bugfix] Wrong selection with search filter in Transfer window [<a href="http://trac.cyberduck.ch/ticket/2336">#2336</a>]</li>
-<li>[Bugfix] Stop button does not work during countdown to retry transfer [<a href="http://trac.cyberduck.ch/ticket/2121">#2121</a>]</li>
-<li>[Bugfix] Transfers fail using AppleScript (SFTP) [<a href="http://trac.cyberduck.ch/ticket/2244">#2244</a>]</li>
-<li>[Bugfix] Update Growl.framework to 1.1.4</li>
         </ul>
     </div>
 </body>
