@@ -13,6 +13,7 @@ Changelog. Last modified: $Date$
 - [Feature] Clickable URL fields
 - [Feature] Display distinguished icon per protocol for bookmarks
 - [Feature] Set quarantine attribute on downloaded files
+- [Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [#2823]
 - [Bugfix] Uploads fail with digest access authentication [#2268]
 - [Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [#2571]
 
